--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ i18n
 numba==0.56.4
 librosa==0.9.2
 mega.py
-gdown
+gdown @ git+https://github.com/IAHispano/gdown.git
 onnxruntime
 pyngrok==4.1.12
 torch
